<resources>
    <string name="app_name">Irish Bird App</string>
    <string name="first_fragment_label">Birds</string>
    <string name="randomBird">Random Bird</string>
    <string name="welcomeText"> Welcome to the Irish Bird App </string>
    <string name="discoverText"> Discover a New Bird </string>
    <string name="commonName">Common Name: </string>
    <string name="binomial">Binomial: </string>
    <string name="irishName">Irish Name: </string>
    <string name="orderName">Order : </string>
    <string name="familyName">Family: </string>
    <string name="imgDescription">Picture of a bird</string>
    <string name="searchInitialText">Search .....</string>
    <string name="searchButtonLabel">Search</string>
    <string name="likeUnlikeButtonLabel">Like/Unlike</string>
    <string name="liked">Liked: </string>
    <string name="infoLink"> Further Info: </string>
    <string name="otherFamilyBirds">Birds from the same family.</string>
    <string name="noFamilyBirds">No family Birds found</string>
</resources>